@@ -182,6 +182,7 @@ namespace libtorrent
 
 		int cursor() const { return m_cursor; }
 		int reverse_cursor() const { return m_reverse_cursor; }
+		int sparse_regions() const { return m_sparse_regions; }
 
 		// sets all pieces to dont-have
 		void init(int blocks_per_piece, int total_num_blocks);
@@ -522,6 +523,9 @@ namespace libtorrent
 		// m_reverse_cursor is the first piece where we also have
 		// all the subsequent pieces
 		int m_reverse_cursor;
+
+		// the number of regions of pieces we don't have.
+		int m_sparse_regions;
 
 		// if this is set to true, it means update_pieces()
 		// has to be called before accessing m_pieces.
