@@ -1,3 +1,4 @@
+	* added workaround for sparse file issue on Windows Vista
 	* added new lt_trackers extension to exchange trackers between
 	  peers
 	* added support for BEP 17 http seeds
